syntax = "proto3";

option go_package = "../server/pkg/proto";

package proto;

service Todos {

    // GetTodo gets a single todo by ID
    rpc GetTodo (GetTodoRequest) returns (GetTodoResponse) {}

    // GetAllTodos gets all todo
    rpc GetAllTodos (GetTodosRequest) returns (GetTodosResponse) {}

    // CreateTodo creates a todo
    rpc CreateTodo (CreateTodoRequest) returns (GetTodoResponse) {}

    // UpdateTodo updates a todo
    rpc UpdateTodo (UpdateTodoResponse) returns (GetTodoResponse) {}

}

message Todo {
    int64   id          = 1;
    string  title       = 2;
    string  description = 3;
    bool    is_done     = 4;
    int64   user_id     = 5;
    string  time_stamp  = 6;
}

message GetTodoRequest{
    int64 id = 1;
}

message GetTodoResponse {
    Todo todo = 1;
}

message GetTodosRequest {}

message GetTodosResponse {
    repeated Todo todos = 1;
}

message CreateTodoRequest {
    string  title       = 1;
    string  description = 2;
    bool    is_done     = 3;
    int64   user_id     = 4;
}

message UpdateTodoResponse {
    int64   id          = 1;
    string  title       = 2;
    string  description = 3;
    bool    is_done     = 4;
}